# quickplatform

./: .gitignore  Dockerfile  Makefile  openapi.json  pyproject.toml  requirements.txt
scripts/: setup.sh
src/: __init__.py  dynamodb.py  iam.py  lambda_.py  s3.py  utils.py
tests/: __init__.py  test_aws.py  test_dynamodb.py
